--- a/edusphere-frontend/src/app/course-list/course-list.component.html
+++ b/edusphere-frontend/src/app/course-list/course-list.component.html
@@ -1,1 +1,32 @@
-<p>course-list works!</p>
+
+
+<h2>Course List</h2>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Course Code</th>
+      <th>Course Name</th>
+      <th>Department</th>
+      <th>Credits</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let course of courses">
+      <td>{{ course.course_code }}</td>
+      <td>{{ course.course_name }}</td>
+      <td>{{ course.department }}</td>
+      <td>{{ course.credits }}</td>
+      <td>
+        <button class="btn btn-sm btn-danger" (click)="deleteCourse(course.id)">Delete</button>
+        <a routerLink="/courses/{{ course.id }}" class="btn btn-sm btn-primary">View</a>
+        <a routerLink="/courses/{{ course.id }}/edit" class="btn btn-sm btn-success">Edit</a>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<div class="text-right">
+  <a routerLink="/courses/new" class="btn btn-primary">Add New Course</a>
+</div>
+
