--- a/edusphere-frontend/src/app/instructor-form/instructor-form.component.html
+++ b/edusphere-frontend/src/app/instructor-form/instructor-form.component.html
@@ -16,7 +16,10 @@
   </div>
   <div class="form-group">
     <label for="department">Department</label>
-    <input type="text" id="department" formControlName="department" class="form-control">
+    <select id="department" class="form-control" formControlName="department">
+      <option *ngFor="let department of departments" [value]="department.id">{{ department.name }}</option>
+    </select>
+    <!-- <input type="text" id="department" formControlName="department" class="form-control"> -->
   </div>
   <div class="form-group">
     <label for="email">Email</label>
