--- a/edusphere-frontend/src/app/enrollment/enrollment.component.html
+++ b/edusphere-frontend/src/app/enrollment/enrollment.component.html
@@ -1,18 +1,31 @@
+
+<br>
+<div class="enroll-form">
 <h2>Enroll in a Course</h2>
+<br>
 <form (ngSubmit)="enrollStudent()">
   <label for="course">Select a Course:</label>
+  <br>
   <select id="course" [(ngModel)]="selectedCourseId" name="course">
     <option *ngFor="let course of availableCourses" [value]="course.id">{{ course.course_name }}</option>
   </select>
-
+  <br>
+  <br>
   <label for="student">Select a Student:</label>
+  <br>
   <select id="student" [(ngModel)]="selectedStudentId" name="student">
     <option *ngFor="let student of students" [value]="student.id">{{ student.name }}</option>
   </select>
-
+  <br>
+  <br>
   <button type="submit">Enroll</button>
 </form>
-
-<div>
-    <button><a href="/enrollment-list">List of Enrollment Courses and Students</a></button>
+<br>
+<br>
+<button><a href="/assignments">Assignment</a></button>
+<button><a href="/announcements">Anouncement</a></button>
 </div>
+
+
+    
+
