--- a/edusphere-frontend/src/app/enrollment-list/enrollment-list.component.html
+++ b/edusphere-frontend/src/app/enrollment-list/enrollment-list.component.html
@@ -1,23 +1,16 @@
 
-<!-- <h2>Enrollment List</h2>
-<div *ngFor="let enrollment of enrollments">
-  <h3>Course Name: {{ getCourseNameById(enrollment.course) }}</h3>
-  <h4>Student Name: </h4>
-  <ul>
-    <li> {{ getStudentNameById(enrollment.student) }}</li>
-  </ul>
-</div> -->
 
-
-
+<br>
+<div class="enroll-list">
 <h2>Enrollment List</h2>
 <div *ngFor="let courseName of courseStudentMap.keys()">
-  <h3>Course Name: {{ courseName }}</h3>
+  <h3>Course: {{ courseName }}</h3>
   <ul>
     <li *ngFor="let studentName of courseStudentMap.get(courseName)">
-      Student Name: {{ studentName }}
+       {{ studentName }}
     </li>
   </ul>
+</div>
 </div>
 
 
