--- a/edusphere-frontend/src/app/student-list/student-list.component.html
+++ b/edusphere-frontend/src/app/student-list/student-list.component.html
@@ -1,31 +1,49 @@
-
-<h2>Student List</h2>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Major</th>
-      <th>Email</th>
-      <th>Contact Number</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let student of students">
-      <td>{{ student.name }}</td>
-      <td>{{ student.major }}</td>
-      <td>{{ student.email }}</td>
-      <td>{{ student.contact_number }}</td>
-      <td>
-        <a routerLink="/students/{{ student.id }}" class="btn btn-sm btn-primary">View</a>
-        <a routerLink="/students/{{ student.id }}/edit" class="btn btn-sm btn-success">Edit</a>
-        <button class="btn btn-sm btn-danger" (click)="deleteStudent(student.id)">Delete</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-<div class="text-right">
-  <a routerLink="/students/new" class="btn btn-primary">Add New Student</a>
-</div>
-
+<!-- <div class="body">
+  <div class="navbar">
+    <p class="navbar-head">EduSphere</p>
+    <div class="navbar-buttons">
+      <button><a href="instructors/new">Register</a></button>
+      <button><a href="instructors/login">Login</a></button>
+    </div>
+  </div> -->
+  <div class="student-list">
+    <h1>Student List</h1>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Major</th>
+          <th>Email</th>
+          <th>Contact Number</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let student of students">
+          <td>{{ student.name }}</td>
+          <td>{{ student.major }}</td>
+          <td>{{ student.email }}</td>
+          <td>{{ student.contact_number }}</td>
+          <td>
+            <a
+              routerLink="/students/{{ student.id }}"
+              class="btn btn-sm btn-primary"
+              >View</a
+            >
+            <a
+              routerLink="/students/{{ student.id }}/edit"
+              class="btn btn-sm btn-success"
+              >Edit</a
+            >
+            <button
+              class="btn btn-sm btn-danger"
+              (click)="deleteStudent(student.id)"
+            >
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+<!-- </div> -->
